# snowflake-homework

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  script.sh
app/: main.py  pagination.py  security.py
ux/: .gcloudignore  Dockerfile  HELP.md  README.md  build.gradle  settings.gradle
ux/src/main/java/ai/osborn/snowflake/: HomeworkApplication.java  MainController.java
ux/src/main/resources/: application-gcp.properties  application.properties
ux/src/main/resources/templates/: customers.html  index.html  plot.html
ux/src/main/resources/templates/fragments/: head.html  nav.html
ux/src/test/java/ai/osborn/snowflake/: HomeworkApplicationTests.java
